crates/mako/src/snapshots/mako__tree_shaking_module__tests__class_func.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&tree_shaking_module"
---
graph
 nodes:[(0, "import [\"x#0\"] - false"), (1, "export [\"f3#0\"] - [\"x#0\"]"), (2, "export [\"f1#0\"] - []"), (3, "stmt [] - [\"constructor#0\", \"f3#0\", \"x#0\"] - true")]
 
 references:["1 -> 0", "3 -> 0", "3 -> 1"]
