crates/mako/src/snapshots/mako__tree_shaking_module__tests__tree_shaking_module-2.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&tree_shaking_module"
---
graph
 nodes:[(0, "import {\"x#0\"} - \"foo\""), (1, "import {} - \"bar\""), (2, "stmt {\"f0#0\"} - {}"), (3, "export {\"f1#0\"} - {} - None"), (4, "export {\"f2#0\"} - {\"x#0\"} - None")]
 
 references:["4 -> 0"]
