crates/mako/src/snapshots/mako__tree_shaking_module__tests__used_export_include_others.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "proxyWithPersist#0",
            ),
        },
    ),
    (
        1,
        {
            SwcIdent(
                "todos#0",
            ),
        },
    ),
    (
        2,
        {
            SwcIdent(
                "Todos#0",
            ),
        },
    ),
]
