crates/mako/src/snapshots/mako__tree_shaking_module__tests__used_export_include_others_2.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "foo#0",
            ),
        },
    ),
    (
        1,
        {
            Default,
        },
    ),
]
