crates/mako/src/snapshots/mako__tree_shaking_module__tests__used_export_include_others_loop_cycle.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "compile#0",
            ),
        },
    ),
    (
        1,
        {
            SwcIdent(
                "parse#0",
            ),
        },
    ),
    (
        2,
        {
            SwcIdent(
                "ruleset#0",
            ),
        },
    ),
]
