crates/mako/src/snapshots/mako__tree_shaking_module__tests__used_export_test_3.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&used"
---
[
    (
        2,
        {
            Default,
        },
    ),
]
