crates/mako/src/snapshots/mako__tree_shaking_module__tests__used_export_test_4.snap
---
source: crates/mako/src/tree_shaking_module.rs
expression: "&used"
---
[
    (
        0,
        {
            SwcIdent(
                "a#0",
            ),
        },
    ),
    (
        3,
        {
            SwcIdent(
                "a#0",
            ),
        },
    ),
]
